--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           © Copyright <strong><span>Sigma Star</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="https://www.facebook.com/toma00.09/">Mohamed Elhossiny</a>
+          Designed by <a href="https://www.facebook.com/kamal.hawash99">Kamal Hawash</a>
         </div>
       </div>
     </footer><!-- End Footer -->
